# rn_issues_auto_archiving

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  TODO.md  develop-requirements.txt  example.env  output.nu  output.ps1  output.sh  pyproject.toml  修改归档.md  流水线yml文件的部署和维护.md  测试用例.md
.github/configs/: auto_archiving.json
.github/workflows/: AutoArchiving.yml  CheckConfig.yml  DeployAutoArchiving.yml  ManualArchiving.yml  Unittest.yml
.gitlab/workflows/: AutoArchiving.yml  CheckConfig.yml  RotateAccessToken.yml  Unittest.yml
.pre-commit/: check_json.py
config/: auto_archiving.json  auto_archving.json  issue_processor.json  test.json
rn_issues_auto_archiving/: README.md  archiving_success.py  auto_archiving_main.py  issue_processor_main.py  main.py  push_document.py
rn_issues_auto_archiving/auto_archiving/: archive_document.py  json_config.py  send_comment.py
rn_issues_auto_archiving/issue_processor/: git_service_client.py  github_response_json.py  gitlab_response_json.py  issue_data_source.py  issue_platform.py  issues_processor.py  json_config.py
rn_issues_auto_archiving/shared/: config_data_source.py  config_manager.py  exception.py  issue_info.py  json_config.py  log.py  reopen_issue.py  send_comment.py
rn_issues_auto_archiving/tests/: conftest.py  issue_platform_test.py  main_test.py
script/: output.nu  output.ps1  output.py  output.sh
shared/: env.py  exception.py  issue_info.py
src/: auto_archiving_main.py  issue_processor_main.py  push_document.py  push_document.sh
src/auto_archiving/: archive_document.py  develop-requirements.txt  (+7 more)
(+27 files in other folders)
